# nannou-rough

./: Cargo.toml  README.md
examples/: arc.rs  ellipse.rs  line.rs  linear_path.rs  rectangle.rs  solid.rs
src/: core.rs  filler.rs  generator.rs  geometry.rs  lib.rs  renderer.rs
