[package]
name = "nannou-rough"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18"

[[example]]
name = "line"
path = "examples/line.rs"

[[example]]
name = "rectangle"
path = "examples/rectangle.rs"

[[example]]
name = "ellipse"
path = "examples/ellipse.rs"

[[example]]
name = "linear_path"
path = "examples/linear_path.rs"

[[example]]
name = "arc"
path = "examples/arc.rs"

[[example]]
name = "solid"
path = "examples/solid.rs"
